--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <main>
       <!-- HERO -->
       <section id="home" class="hero animate-on-scroll">
+        <!-- <div class="overlay"></div> -->
         <div class="container">
           <div class="hero-content">
             <h2>Your Health, Our Priority</h2>
@@ -59,7 +60,7 @@
         <div class="wave-divider">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100">
             <path
-              d="M0 0v60c9 0 18-3 25-10 13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s37 13 50 0c14-14 37-14 50 0 7 7 16 10 25 10V0H0Z"
+              d="M0 0v60c9 0 18-3 25-10 13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s36 14 50 0c13-14 36-14 50 0s37 13 50 0c14-14 37-14 50 0 7 7 16 10 25 10V0H0Z"
               fill="#dde0c5"
             ></path>
           </svg>
